# Distributed-voice-call-using-WebRTC

./: .gitignore  README.md
A1/WebRTC_Call/: CMakeLists.txt  audioinput.cpp  audioinput.h  callmanager.h  main.cpp  webrtc.cpp  webrtc.h
CA1/: README.md  index.js  webrtc.cpp
CA1/Description/: README.md
CA1/Signaling_Server/: README.md  package-lock.json
CA1/WebRTC_Call/: .gitignore  CMakeLists.txt  Main.qml  README.md  WebRTC_Call.pro  audioinput.cpp  audioinput.h  audiooutput.cpp  audiooutput.h  audioprocessor.cpp  audioprocessor.h  callmanager.cpp  callmanager.h  main.cpp  socket.cpp  socket.h  webrtc.cpp  webrtc.h
CA1/WebRTC_Call/audio/: audioinput.cpp  audioinput.h  audiooutput.cpp  audiooutput.h  audioprocessor.cpp  audioprocessor.h
CA1/WebRTC_Call/network/: socket.cpp  socket.h
CA1/WebRTC_Call/src/: callmanager.cpp  callmanager.h
CA1/docs/: README.md
CA3/CN_CA_3_Template/: CN_CA_3.pro
CA3/CN_CA_3_Template/assets/: config.json
CA3/CN_CA_3_Template/src/: dijkstra.cpp  main.cpp  src.pri
CA3/CN_CA_3_Template/src/AutonomousSystem/: README.md  autonomoussystem.cpp  autonomoussystem.h
CA3/CN_CA_3_Template/src/DHCP/: README.md  dhcp.cpp  dhcp.h
CA3/CN_CA_3_Template/src/DHCPServer/: README.md
CA3/CN_CA_3_Template/src/DataGenerator/: README.md  datagenerator.cpp  datagenerator.h
CA3/CN_CA_3_Template/src/DataLinkHeader/: README.md  datalinkheader.cpp  datalinkheader.h
CA3/CN_CA_3_Template/src/EventsCoordinator/: EventsCoordinator.cpp  EventsCoordinator.h  README.md
CA3/CN_CA_3_Template/src/Globals/: Globals.h  README.md
CA3/CN_CA_3_Template/src/IP/: IP.cpp  IP.h  README.md  ipheader.cpp  ipheader.h
CA3/CN_CA_3_Template/src/MACAddress/: README.md  macAddress.cpp  macAddress.h  macaddressgenerator.cpp  macaddressgenerator.h  testmacaddress.cpp  testmacaddress.h  testmacaddressgenerator.cpp  testmacaddressgenerator.h
CA3/CN_CA_3_Template/src/Network/: README.md  network.cpp  network.h
CA3/CN_CA_3_Template/src/NetworkSimulator/: README.md  networkSimulator.cpp  networkSimulator.h
CA3/CN_CA_3_Template/src/Node/: README.md  node.cpp  node.h
CA3/CN_CA_3_Template/src/PC/: README.md  pc.cpp  pc.h
CA3/CN_CA_3_Template/src/Packet/: Packet.cpp  Packet.h  README.md
CA3/CN_CA_3_Template/src/Port/: Port.cpp  Port.h  README.md
CA3/CN_CA_3_Template/src/PortBindingManager/: PortBindingManager.cpp  PortBindingManager.h  README.md
CA3/CN_CA_3_Template/src/Protocol/: README.md  dijkstra.cpp  dijkstra.h  ospf.cpp  ospf.h  rip.cpp  rip.h
CA3/CN_CA_3_Template/src/Router/: README.md  router.cpp  router.h  routingtable.cpp  routingtable.h
CA3/CN_CA_3_Template/src/TCPHeader/: README.md  (+2 more)
Signaling_Server/: index.js  package.json
V3/: index.js  package.json
V3/WebRTC_Call/: WebRTC_Call.pro  audioinput.cpp  audioinput.h  audioprocessor.cpp  audioprocessor.h  callmanager.cpp  callmanager.h  main.cpp  webrtc.cpp
WebRTC_Call/: README.md  main.cpp
WebRTC_Call/audio/: audioinput.cpp  audioinput.h  audioprocessor.cpp
WebRTC_Call/network/: socket.cpp  webrtc.cpp  webrtc.h
(+5 files in other folders)
